--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -108,13 +108,14 @@ BEGIN
     CONTROL         "자소 단위 지움 (&J)", IDC_BACKSPACE_BY_JAMO, "Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP, 134, 76, 71, 10 
     CONTROL         "<ESC> 영문전환 (&E)", IDC_ESCENG_SUPPORT, "Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP, 16, 101,109, 10 
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 16, 101,79, 10 
     CONTROL         "<Shift>-<SPACE> 한/영키 (&H)", IDC_USE_SHIFT_SPACE, "Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP, 16, 89, 109, 10 
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 16, 89, 126, 10
+
     CONTROL         "드보락 지원 (&V)", IDC_DVORAK_SUPPORT, "Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP, 134, 89, 70, 10 
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 98, 102, 64, 11
     CONTROL         "쿼티 단축키 (&Q)", IDC_QWERTY_HOTKEY_SUPPORT, "Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP, 134, 101, 70, 10 
+                    BS_AUTOCHECKBOX | WS_TABSTOP, 163, 103, 61, 10
 /*
     CONTROL         "드보락 지원 (&V)",IDC_DVORAK_SUPPORT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,138,79,60,10
@@ -139,6 +140,7 @@ BEGIN
                     16,139,78,10
     CONTROL         "비슷한 단어 보기(&M)", IDC_SIMILAR_WORDS, BUTTON, BS_AUTOCHECKBOX | WS_TABSTOP,
                     134,140,90,10 
+    CONTROL         "한/영키 설정(&T)", IDC_HANGUL_TOGGLE, BUTTON, BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 142, 88, 62, 13 
 END
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
@@ -188,7 +190,7 @@ END
 DLG_DEBUG DIALOG DISCARDABLE  30, 65, 215, 135
 STYLE DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "DebugOptions"
-FONT 9, "MS Shell Dlg"
+FONT 9, "굴림"
 LANGUAGE 0x12, 0x1
 BEGIN
     CONTROL         "LOGF_ENTRY",IDC_LOGF_ENTRY,"Button",BS_AUTOCHECKBOX | 
@@ -202,6 +204,29 @@ BEGIN
     CONTROL         "Show GuideLine on Ctrl-G",IDC_DEBF_GUIDELINE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,5,89,98,14
 END
+
+
+DLG_TOGGLE_KEY DIALOG 0, 0, 201, 76
+STYLE WS_SYSMENU | DS_MODALFRAME | DS_NOIDLEMSG | WS_POPUP | WS_VISIBLE | WS_CAPTION
+EXSTYLE WS_EX_DLGMODALFRAME | WS_EX_WINDOWEDGE
+CAPTION "한/영 전환 키 설정"
+LANGUAGE 0x12, 0x1
+FONT 9, "MS Shell Dlg"
+{
+   CONTROL "한/영전환 키", -1, BUTTON, BS_GROUPBOX | WS_CHILD | WS_VISIBLE, 9, 6, 129, 63 
+   CONTROL "왼쪽", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 41, 18, 18, 10 
+   CONTROL "오른쪽", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 65, 18, 24, 11 
+   CONTROL "SHIFT", IDC_LSHIFT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 29, 40, 10 
+   CONTROL "-", IDC_RSHIFT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 29, 16, 10 
+   CONTROL "CTRL", IDC_LCTRL, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 41, 40, 10 
+   CONTROL "-", IDC_RCTRL, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 41, 16, 10 
+   CONTROL "ALT", IDC_LALT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 53, 40, 10 
+   CONTROL "-", IDC_RALT, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 53, 16, 10 
+   CONTROL "", IDC_TOGGLE, COMBOBOX, CBS_DROPDOWNLIST | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 87, 39, 46, 40 
+   CONTROL "확인", 1, BUTTON, BS_DEFPUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 14, 50, 16 
+   CONTROL "기본값", 2, BUTTON, BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 33, 50, 16 
+}
+
 
 
 #ifndef _MAC
@@ -438,6 +463,8 @@ BEGIN
     IDS_NOSTRING            "There is no string\r\nPlease enter the string"
     IDS_NOMEMORY            "메모리가 부족합니다."
     IDS_REGWORDRET          "Fail to register Word"
+
+    IDS_HANGUL_TOGGLE          "한/영키 (&H)"
 END
 
 #endif    // Korean resources
@@ -487,14 +514,14 @@ FONT 8, "MS Shell Dlg"
    CONTROL	"&Concurrent", IDC_CONCURRENT_TYPING, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,77,79,49,10 
    CONTROL	"D&Vorak", IDC_DVORAK_SUPPORT, BUTTON,
-		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,91,35,10
+		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,123,103,35,10
    CONTROL      "&Qwerty shortcut", IDC_QWERTY_HOTKEY_SUPPORT , BUTTON,
                 BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,103,67,10
    CONTROL	"Delete by &Jaso unit", IDC_BACKSPACE_BY_JAMO, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,135,79,71,10 
    CONTROL	"<&ESC> to ENG mode", IDC_ESCENG_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,102,79,10 
-   CONTROL	"<Shift>-<SPACE> toggle &Han/Eng", IDC_USE_SHIFT_SPACE, BUTTON,
+   CONTROL	"<Shift>-<SPACE> &Han/Eng toggle", IDC_USE_SHIFT_SPACE, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,21,90,122,10
    CONTROL	"E&xtended Hanja", IDC_KSX1002_SUPPORT, BUTTON,
 		BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP,169,114,67,10 
@@ -507,6 +534,7 @@ FONT 8, "MS Shell Dlg"
    CONTROL      "&Raw Jamo compose", IDC_FULL_MULTIJOMO, BUTTON,
                 BS_AUTOCHECKBOX | WS_TABSTOP, 21,138,78,10
    CONTROL      "Show si&milar words", IDC_SIMILAR_WORDS, BUTTON, BS_AUTOCHECKBOX | WS_TABSTOP,135,138,78,10 
+   CONTROL      "Set Han/Eng Key(&T)", IDC_HANGUL_TOGGLE, BUTTON, BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 164, 88, 72, 13 
 }
 
 DLG_REGISTERWORD DIALOG DISCARDABLE  46, 36, 191, 83
@@ -548,6 +576,27 @@ FONT 8, "MS Shell Dlg"
    LTEXT	"The software product is protected by copyright laws in Korea. See the included license along with this program or visit the homepage(http://kldp.net/projects/saenaru/) of this project.", IDC_STATIC,
 		8,102,198,27 
    GROUPBOX	"", IDC_STATIC, 3,53,209,77 
+}
+
+DLG_TOGGLE_KEY DIALOG 0, 0, 201, 76
+STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_DLGMODALFRAME | WS_EX_WINDOWEDGE
+CAPTION "Han/Eng Toggle Key"
+LANGUAGE 0x09, 0x01
+FONT 8, "MS Shell Dlg"
+{
+   CONTROL "Han/Eng Toggle key", -1, BUTTON, BS_GROUPBOX | WS_CHILD | WS_VISIBLE, 7, 4, 130, 66
+   CONTROL "Left", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 43, 18, 18, 10
+   CONTROL "Right", -1, STATIC, SS_LEFT | WS_CHILD | WS_VISIBLE | WS_GROUP, 68, 18, 24, 11
+   CONTROL "SHIFT", 3, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 29, 40, 10
+   CONTROL "-", 4, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 29, 16, 10
+   CONTROL "CTRL", 5, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 41, 40, 10
+   CONTROL "-", 6, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 41, 16, 10
+   CONTROL "ALT", 7, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 15, 53, 40, 10
+   CONTROL "-", 8, BUTTON, BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 61, 53, 16, 10
+   CONTROL "", 9, COMBOBOX, CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_CHILD | WS_VISIBLE | WS_VSCROLL | WS_TABSTOP, 80, 41, 51, 13
+   CONTROL "OK", 1, BUTTON, BS_DEFPUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 12, 50, 16
+   CONTROL "Default", 2, BUTTON, BS_PUSHBUTTON | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 143, 30, 50, 16
 }
 
 
